Import code from EIDAS-Sources-2.0.0.zip in eIDAS-node-2.0.0.zip
sha256 of outer eidas-node zip: 499586f599a7bc0f31b381147dbcdd5f1f0e4abc7e188bcd14b6781ba83ab692

Also import pdfs from the same download page to the docs folder (some not yet available)